Aeration stat player

--- a/src/app/modules/sandbox/stats/player/playerStats.html
+++ b/src/app/modules/sandbox/stats/player/playerStats.html
@@ -89,8 +89,8 @@
     <div class="row">
         <div class="col s12">
             <ul id="task-card" class="collection with-header">
-                <li class="collection-header blue-grey darken-2 white-text">
-                    <div class="row">
+                <li class="collection-header grey lighten-4 white-text">
+                    <div class="row blue-grey darken-2">
                         <div class="col m4 s12 center"><avatar person="player" width="'100px'"></avatar></div>
                         <div class="col m8 s12 center">
                             <h3 class="task-card-title">{{player.firstname}} {{player.name}}</h3>
@@ -170,7 +170,7 @@
                     <!-- Filter Zone end-->
                     <div class="row white-text">
                         <div class="col m6 s12">
-                            <div class="row grey lighten-4">
+                            <div class="row white">
                                 <div class="col s12 light-green lighten-1 center"><h5>Buts</h5></div>
                                 
                                 <div class="col s12">&nbsp;</div>
@@ -186,7 +186,7 @@
                             </div>
                         </div>
                         <div class="col m6 s12">
-                            <div class="row grey lighten-4">
+                            <div class="row white">
                                 <div class="col s12 light-blue lighten-1 center"><h5>Utilisation</h5></div>
                                 
                                 <div class="col s12">&nbsp;</div>
@@ -202,7 +202,7 @@
                             </div>
                         </div>
                         
-                        <div class="col m5 s12 grey lighten-4 center">
+                        <div class="col m5 s12 white center">
                             <div class="col s12 blue-grey-text text-darken-1 center"><h5>{{'stats.efficiently.efficiently' | translate }} {{nbGoalGlobal}}/{{nbShootGlobal}}</h5></div>
                             <div class="col s12">&nbsp;</div>
                             <div class="col s12">
@@ -215,12 +215,12 @@
                         <div class="col m1 s12">&nbsp;</div>
                         
                         <div class="col m6 s12">
-                            <div class="row grey lighten-4">
+                            <div class="row white">
                                 <div class="col s12 red lighten-1 center"><h5>{{'stats.labelTab.sanctions' | translate }}</h5></div>
                                 
                                 <div class="col s12">&nbsp;</div>
                                 <div class="col s6 blue-grey-text text-darken-2 center"><h6>{{'stats.sanction.yellowCard' | translate }}</h6></div>
-                                <div class="col s6 yellow accent-4  center"><h5>{{nbYellowCard}}</h5></div>
+                                <div class="col s6 amber accent-2  center"><h5>{{nbYellowCard}}</h5></div>
                                 
                                 <div class="col s6 blue-grey-text text-darken-2 center"><h6>{{'stats.sanction.excluTempo' | translate }}</h6></div>
                                 <div class="col s6 red-text text-lighten-1 center"><h5>{{nbExcluTmp}}</h5></div>
@@ -235,8 +235,8 @@
                     <div class="row">
                         <div class="col s12">
                             <ul class="tabs" tabs>
-                                <li class="tab col s4"><a href="#shoot" class="blue-grey-text text-darken-2">{{'stats.labelTab.shoot' | translate }}</a></li>
-                                <li class="tab col s4"><a href="#actions" class="blue-grey-text text-darken-2">{{'stats.labelTab.actions' | translate }}</a></li>
+                                <li class="tab col s4 blue-grey darken-2"><a href="#shoot" class="white-text">{{'stats.labelTab.shoot' | translate }}</a></li>
+                                <li class="tab col s4 blue-grey darken-2"><a href="#actions" class="white-text">{{'stats.labelTab.actions' | translate }}</a></li>
                             </ul>
                         </div>
                     </div>
@@ -306,7 +306,7 @@
                                 <div class="collapsible-header"><i class="material-icons">place</i>Attaque</div>
                                 <div class="collapsible-body">
                                     <div class="col m6 s12">
-                                        <div class="row grey lighten-3">
+                                        <div class="row white">
                                             <div class="col s12 light-green lighten-1 center white-text"><h5>Actions positives</h5></div>
 
                                             <div class="col s12">&nbsp;</div>
@@ -325,7 +325,7 @@
                                         </div>
                                     </div>
                                     <div class="col m6 s12">
-                                        <div class="row grey lighten-4">
+                                        <div class="row white">
                                             <div class="col s12 red lighten-1 center white-text"><h5>Actions Négatives</h5></div>
 
                                             <div class="col s12">&nbsp;</div>
@@ -349,7 +349,7 @@
                                 <div class="collapsible-header"><i class="material-icons">place</i>Défense</div>
                                 <div class="collapsible-body">
                                     <div class="col m6 s12">
-                                        <div class="row grey lighten-3">
+                                        <div class="row white">
                                             <div class="col s12 light-green lighten-1 center white-text"><h5>Actions positives</h5></div>
 
                                             <div class="col s12">&nbsp;</div>
@@ -368,7 +368,7 @@
                                         </div>
                                     </div>
                                     <div class="col m6 s12">
-                                        <div class="row grey lighten-4">
+                                        <div class="row white">
                                             <div class="col s12 red lighten-1 center white-text"><h5>Actions Négatives</h5></div>
 
                                             <div class="col s12">&nbsp;</div>
