--- a/src/app/modules/sandbox/stats/player/playerStats.html
+++ b/src/app/modules/sandbox/stats/player/playerStats.html
@@ -92,9 +92,25 @@
                 <li class="collection-header white white-text">
                     <div class="row blue-grey darken-2">
                         <div class="col m4 s12 center"><avatar person="player" width="'100px'"></avatar></div>
-                        <div class="col m8 s12 center">
+                        <div class="col m4 s12 center">
                             <h3 class="task-card-title">{{player.firstname}} {{player.name}}</h3>
-                            <h5 class="task-card-date">Arrière gauche</h5>
+                            <h5 class="task-card-date">{{player.positionType}}</h5>
+                        </div>
+                        <div class="col m4 s12 grey lighten-4">
+                            <div class="row ">
+                                <div class="col s12 blue-grey center"><h6>{{'stats.resumeTab.usePlayer' | translate }}</h6></div>
+                                
+                                <div class="col s12">&nbsp;</div>
+                                <div class="col s4 blue-grey-text text-darken-2 center"><h6>{{'stats.resumeTab.gamePlayed' | translate }}</h6></div>
+                                <div class="col s4 blue-grey-text text-darken-2 center"><h6>{{'stats.resumeTab.holder' | translate }}</h6></div>
+                                <div class="col s4 blue-grey-text text-darken-2 center"><h6>{{'stats.resumeTab.playTime' | translate }}</h6></div>
+                                
+                                <div class="col s4 light-blue-text text-lighten-1 center"><h6>3</h6></div>
+                                <div class="col s4 light-blue-text text-lighten-1 center"><h6>{{stats['holder'].count}}</h6></div>
+                                <div class="col s4 light-blue lighten-1 center"><h6>25 {{'stats.resumeTab.minute' | translate }}</h6></div>
+
+                                <div class="col s12">&nbsp;</div>
+                            </div>
                         </div>
                         
                     </div>
@@ -167,79 +183,86 @@
                         </div>
                         <div class="col s1 center" ng-if="periodicity=='season'">&nbsp;</div>
                     </div> 
-                    <!-- Filter Zone end-->
-                    <div class="row white-text">
-                        <div class="col m6 s12">
-                            <div class="row white">
-                                <div class="col s12 light-green lighten-1 center"><h5>Buts</h5></div>
-                                
-                                <div class="col s12">&nbsp;</div>
-                                <div class="col s4 blue-grey-text text-darken-2 center"><h6>Nombre de Buts</h6></div>
-                                <div class="col s4 blue-grey-text text-darken-2 center"><h6>Moyenne/match</h6></div>
-                                <div class="col s4 blue-grey-text text-darken-2 center"><h6>Fréquence <br/>1 but toutes les</h6></div>
-                                
-                                <div class="col s4 light-green lighten-2 center"><h5>{{stats['goalScored'].count}}</h5></div>
-                                <div class="col s4 light-green-text text-lighten-2 center"><h5>5,67</h5></div>
-                                <div class="col s4 light-green-text text-lighten-2 center"><h5>3 minutes</h5></div>
-
-                                <div class="col s12">&nbsp;</div>
-                            </div>
-                        </div>
-                        <div class="col m6 s12">
-                            <div class="row white">
-                                <div class="col s12 light-blue lighten-1 center"><h5>Utilisation</h5></div>
-                                
-                                <div class="col s12">&nbsp;</div>
-                                <div class="col s4 blue-grey-text text-darken-2 center"><h6>Matchs joués</h6></div>
-                                <div class="col s4 blue-grey-text text-darken-2 center"><h6>Titularisations</h6></div>
-                                <div class="col s4 blue-grey-text text-darken-2 center"><h6>Temps de jeu <br/> moyen</h6></div>
-                                
-                                <div class="col s4 light-blue-text text-lighten-1 center"><h5>3</h5></div>
-                                <div class="col s4 light-blue-text text-lighten-1 center"><h5>{{stats['holder'].count}}</h5></div>
-                                <div class="col s4 light-blue lighten-1 center"><h5>25 minutes</h5></div>
-
-                                <div class="col s12">&nbsp;</div>
-                            </div>
-                        </div>
-                        
-                        <div class="col m5 s12 white center">
-                            <div class="col s12 blue-grey-text text-darken-1 center"><h5>{{'stats.efficiently.efficiently' | translate }} {{nbGoalGlobal}}/{{nbShootGlobal}}</h5></div>
-                            <div class="col s12">&nbsp;</div>
-                            <div class="col s12">
-                                <c3chart bindto-id="gaugeEfficientlyGlobal" chart-columns="efficientlyGlobalCol" chart-data="efficientlyGlobalData">
-                                    <chart-gauge min="0" max="100" width="40"/>
-                                </c3chart>
-                            </div>
-                        </div>
-                        
-                        <div class="col m1 s12">&nbsp;</div>
-                        
-                        <div class="col m6 s12">
-                            <div class="row white">
-                                <div class="col s12 red lighten-1 center"><h5>{{'stats.labelTab.sanctions' | translate }}</h5></div>
-                                
-                                <div class="col s12">&nbsp;</div>
-                                <div class="col s6 blue-grey-text text-darken-2 center"><h6>{{'stats.sanction.yellowCard' | translate }}</h6></div>
-                                <div class="col s6 amber accent-2  center"><h5>{{stats['yellowCard'].count}}</h5></div>
-                                
-                                <div class="col s6 blue-grey-text text-darken-2 center"><h6>{{'stats.sanction.excluTempo' | translate }}</h6></div>
-                                <div class="col s6 red-text text-lighten-1 center"><h5>{{stats['exclTmp'].count}}</h5></div>
-                                
-                                <div class="col s6 blue-grey-text text-darken-2 center"><h6>{{'stats.sanction.redCard' | translate }}</h6></div>
-                                <div class="col s6 red lighten-1  center"><h5>{{stats['redCard'].count}}</h5></div>
-
-                                <div class="col s12">&nbsp;</div>
-                            </div>
-                        </div>
-                    </div>
+                    
+                    <!-- Tabs -->
                     <div class="row">
                         <div class="col s12">
                             <ul class="tabs" tabs>
+                                <li class="tab col s4 blue-grey darken-2"><a href="#resume" class="white-text">{{'stats.labelTab.resume' | translate }}</a></li>
                                 <li class="tab col s4 blue-grey darken-2"><a href="#shoot" class="white-text">{{'stats.labelTab.shoot' | translate }}</a></li>
                                 <li class="tab col s4 blue-grey darken-2"><a href="#actions" class="white-text">{{'stats.labelTab.actions' | translate }}</a></li>
                             </ul>
                         </div>
                     </div>
+                    
+                    <!-- Filter Zone end-->
+                    <div class="row white-text" id="resume">
+
+                        <div class="col m8 s12">
+                            <div class="row white">
+                                
+                                <div class="col s12 light-green lighten-1 center"><h6>{{'stats.resumeTab.goal' | translate }}</h6></div>
+                                
+                                <div class="col s12">&nbsp;</div>
+                                <div class="col s4 blue-grey-text text-darken-2 center"><h6>{{'stats.resumeTab.goalLabel' | translate }}</h6></div>
+                                <div class="col s4 blue-grey-text text-darken-2 center"><h6>{{'stats.resumeTab.goalAvg' | translate }}</h6></div>
+                                <div class="col s4 blue-grey-text text-darken-2 center"><h6>{{'stats.resumeTab.frequence' | translate }}<br/>{{'stats.resumeTab.frequence2' | translate }}</h6></div>
+                                
+                                <div class="col s4 light-green lighten-2 center"><h6>{{stats['goalScored'].count}}</h6></div>
+                                <div class="col s4 light-green-text text-lighten-2 center"><h6>5,67</h6></div>
+                                <div class="col s4 light-green-text text-lighten-2 center"><h6>3 {{'stats.resumeTab.minute' | translate }}</h6></div>
+                                <div class="col s12">&nbsp;</div>
+                                <div class="col s12">&nbsp;</div>
+                            </div>
+                        </div>
+                        
+                        <div class="col m4 s12 grey lighten-4 center">
+                            <div class="col s12 blue-grey-text text-darken-1 center"><h6>{{'stats.efficiently.efficiently' | translate }} {{nbGoalGlobal}}/{{nbShootGlobal}}</h6></div>
+                            <div class="col s12">
+                                <c3chart bindto-id="gaugeEfficientlyGlobal" chart-columns="efficientlyGlobalCol" chart-data="efficientlyGlobalData">
+                                    <chart-gauge min="0" max="100" width="40"/>
+                                </c3chart>
+                            </div>
+                        </div>   
+                        
+                        <div class="col m4 s12 grey lighten-4">
+                            <div class="col s12 blue-grey-text text-darken-1 center"><h6>{{'stats.actionTab.attack' | translate }}</h6></div>
+                            <div class="col s12">
+                                <c3chart bindto-id="chartActionsAtt" chart-columns="attackCol" chart-data="attackData">
+                                    <chart-donut width="60"/>
+                                </c3chart>
+                            </div>
+                            <div class="col s12">&nbsp;</div>
+                        </div>
+     
+                        <div class="col m4 s12 grey lighten-4">
+                            <div class="col s12 blue-grey-text text-darken-1 center"><h6>{{'stats.actionTab.defense' | translate }}</h6></div>
+                            <div class="col s12">
+                                <c3chart bindto-id="chartActionsDef" chart-columns="defenseCol" chart-data="defenseData">
+                                    <chart-donut width="60"/>
+                                </c3chart>
+                            </div>
+                            <div class="col s12">&nbsp;</div>
+                        </div>
+                        
+                        <div class="col m4 s12">
+                            <div class="row white">
+                  
+                                <div class="col s12 red lighten-1 center"><h6>{{'stats.resumeTab.sanctions' | translate }}</h6></div>
+                                
+                                <div class="col s12">&nbsp;</div>
+                                <div class="col s8 blue-grey-text text-darken-2 center"><h6>{{'stats.sanction.yellowCard' | translate }}</h6></div>
+                                <div class="col s4 amber accent-2  center"><h6>{{stats['yellowCard'].count}}</h6></div>
+                                
+                                <div class="col s8 blue-grey-text text-darken-2 center"><h6>{{'stats.sanction.excluTempo' | translate }}</h6></div>
+                                <div class="col s4 red-text text-lighten-1 center"><h6>{{stats['exclTmp'].count}}</h6></div>
+                                
+                                <div class="col s8 blue-grey-text text-darken-2 center"><h6>{{'stats.sanction.redCard' | translate }}</h6></div>
+                                <div class="col s4 red lighten-1  center"><h6>{{stats['redCard'].count}}</h6></div>
+                            </div>
+                        </div>  
+                    </div>
+                    
                     <!-- Stats shoot Start -->
                     <div class="row" id="shoot">
                         <!-- Stats shoot efficiently start -->
