--- a/src/app/modules/commons/users/profile/plan.html
+++ b/src/app/modules/commons/users/profile/plan.html
@@ -2,13 +2,6 @@
 <div class="col s12 m2 center">
     <avatar person="user" width="'130px'"></avatar>
     <h3>{{user.account.login}}</h3>
-
-    <div class="btn-toolbar">
-        <div class="btn-group">
-            <a ng-href="{{billPdfUrl}}" class="btn btn-default" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
-            <!--                 <a href="#" class="btn btn-default"><i class="fa fa-tag"></i></a>
-                             <a class="btn btn-default"><i class="fa fa-share-alt"></i></a> -->
-        </div>
     </div>
 </div>
 <div class="col s12 m10">
@@ -20,6 +13,7 @@
             <th translate="profile.label.price"></th>
             <th translate="profile.label.billingnumber"></th>
             <th translate="profile.label.billingdate"></th>
+            <th></th>
         </tr>
         </thead>
         <tbody>
@@ -31,6 +25,8 @@
             <td>{{plan.amountPaid}} €</td>
             <td>{{plan.paymentId}}</td>
             <td>{{plan.paidDate | date}}</td>
+            <td>{{plan.paidDate | date}}</td>
+            <a ng-href="{{billPdfUrl}}?id={{$index}}" class="btn btn-default" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
         </tr>
         </tbody>
     </table>
