Asana-72125517518103 : Suppression des placeholder

--- a/src/app/components/directives/headerMenu/headerMenu.html
+++ b/src/app/components/directives/headerMenu/headerMenu.html
@@ -182,13 +182,11 @@
         <div class="modal-content grey lighten-3 ">
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="modal-login" type="text"
-                           class="validate" ng-model="signin.login" required>
+                    <input id="modal-login" type="text" class="validate" ng-model="signin.login" required>
                     <label for="modal-login">{{'content.login.label.login' | translate }}</label>
                 </div>
                 <div class="input-field col s12">
-                    <input id="modal-password" type="password"
-                           class="validate" ng-model="signin.passwd" required>
+                    <input id="modal-password" type="password" class="validate" ng-model="signin.passwd" required>
                     <label for="modal-password">{{'content.login.label.password' | translate }}</label>
                 </div>
             </div>
@@ -217,34 +215,27 @@
         <div class="modal-content grey lighten-3 ">
             <div class="row">
                 <div class="input-field col s6">
-                    <input placeholder="{{'content.signup.label.firstname' | translate }}" id="firstname" type="text"
-                           class="validate" ng-model="signup.firstname" required>
+                    <input id="firstname" type="text" class="validate" ng-model="signup.firstname" required>
                     <label for="firstname">{{'content.signup.label.firstname' | translate }}</label>
                 </div>
                 <div class="input-field col s6">
-                    <input placeholder="{{'content.signup.label.name' | translate }}" id="name" type="text"
-                           class="validate" ng-model="signup.name" required>
+                    <input id="name" type="text" class="validate" ng-model="signup.name" required>
                     <label for="name">{{'content.signup.label.name' | translate }}</label>
                 </div>
                 <div class="input-field col s12">
-                    <input placeholder="{{'content.signup.label.login' | translate }}" id="login" type="text"
-                           class="validate" ng-model="signup.account.login" required>
+                    <input id="login" type="text" class="validate" ng-model="signup.account.login" required>
                     <label for="login">{{'content.signup.label.login' | translate }}</label>
                 </div>
                 <div class="input-field col s12">
-                    <input placeholder="{{'content.signup.label.email' | translate }}" id="email" type="email"
-                           class="validate" ng-model="signup.contact.email" required>
+                    <input id="email" type="email" class="validate" ng-model="signup.contact.email" required>
                     <label for="email">{{'content.signup.label.email' | translate }}</label>
                 </div>
                 <div class="input-field col s6">
-                    <input placeholder="{{'content.signup.label.password' | translate }}" id="password" type="password"
-                           class="validate" ng-model="signup.account.passwd" required>
+                    <input id="password" type="password" class="validate" ng-model="signup.account.passwd" required>
                     <label for="password">{{'content.signup.label.password' | translate }}</label>
                 </div>
                 <div class="input-field col s6">
-                    <input placeholder="{{'content.signup.label.passwordConfirm' | translate }}" id="passwordConfirm"
-                           type="password"
-                           class="validate" ng-model="passwdConfirm" required>
+                    <input id="passwordConfirm" type="password" class="validate" ng-model="passwdConfirm" required>
                     <label for="password">{{'content.signup.label.passwordConfirm' | translate }}</label>
                 </div>
                 <div class="input-field col s6">
