Asana-72403711439339 : logos des markets

--- a/src/app/modules/commons/users/signup/signupDone.html
+++ b/src/app/modules/commons/users/signup/signupDone.html
@@ -11,7 +11,7 @@
                          <div class="red-text text-lighten-1">
                              <i class="medium material-icons">verified_user</i>
                          </div>
-                        <h5 class="center" translate="endPage.title"></h5>
+                        <h4 class="center" translate="endPage.title"></h4>
                     </div>
                 </div>
             </div>
@@ -32,6 +32,19 @@
                 <div class="center col s12">
                 <a href="" class="btn white-text blue-grey darken-3" ng-click="goHome()"><i class="fa fa-home left"></i>{{'endPage.buttonHome' | translate }}</a>&nbsp;
                 </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="container">
+        <div class="section">
+            <h5 class="center-align" translate="landing.area-4.content"></h5>
+            <div class="row">
+                <span class="col m2 hide-on-small-only">&nbsp;</span>
+                <img class="col m3 s12 center-align" src="assets/images/appstore.png" alt="AppStore"/>
+                <span class="col m2 hide-on-small-only">&nbsp;</span>
+                <img class="col m3 s12 center-align" src="assets/images/googleplay.png" alt="Googleplay"/>
+                <span class="col m2 hide-on-small-only">&nbsp;</span>
             </div>
         </div>
     </div>
