--- a/src/app/modules/commons/users/signup/signup.html
+++ b/src/app/modules/commons/users/signup/signup.html
@@ -102,7 +102,7 @@
                             <label for="userPhoneHome">{{'civilSection.label.userPhoneHome' | translate }} <span class="red-text text-lighten-1">*</span></label>
                         </div>
                         <div class="input-field col m2 s8">
-                            <input id="userPhoneHome" type="text" ui-mask="{{'commons.format.phone.pattern' | translate }}" class="validate" min="0" ng-model="signup.contact.home" model-view-value="true">
+                            <input id="userPhoneHome" type="text" ui-mask="{{'commons.format.phone.pattern' | translate }}" class="validate" min="0" ng-model="signup.contact.home">
                         </div>
                         <div class="col m5 hide-on-med-and-down">&nbsp;</div>
                     </div>
@@ -312,7 +312,7 @@
                         <div class="input-field col s1"></div>
                         <div class="input-field col s5">
                             {{'civilSection.label.' + signup.gender + '' | translate}} {{signup.name | uppercase}} {{signup.firstname}}<br>
-                            {{'sumupSection.label.born' | translate}} {{signup.birthdateInput}}<br>
+                            {{'sumupSection.label.born' | translate}} {{signup.birthdateInput | date:'dd/MM/yyyy'}}<br>
                             {{signup.contact.email}}<br>
                             <span ng-hide="signup.nationality===null || angular.isUndefined(signup.nationality) || angular.isUndefined(signup.nationality.label)">{{'civilSection.label.userNationality' | translate }} : {{signup.nationality.label}}<br></span>
                             <span ng-hide="signup.contact.home===null || angular.isUndefined(signup.contact.home)">{{'civilSection.label.userPhoneHome' | translate}} : {{signup.contact.home}}</span><br></span> 
